--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -561,7 +561,6 @@ fr:
     approuver les bots.
   could_not_save_related_bot_data: Désolé, il n'a pas été possible d'ajouter le bot
     à cette équipe
-  bot_limited_team_not_pro: Désolé, ce bot n'est pas disponible à votre équipe
   bot_cant_add_response_to_task: Désolé, un bot n'est pas autorisé à répondre directement
     à une tâche. Il faut plutôt soumettre une suggestion de réponse
   bot_cant_add_review_to_task: Désolé, les bots ne sont pas autorisés à réviser les
@@ -691,6 +690,10 @@ fr:
   smooch_requests_asc: Moins demandés
   smooch_requests_desc: Plus demandés
   bot_request_url_invalid: URL du bot non valide
+  custom_message_smooch_bot_ask_for_confirmation_caio-bot-garden-refactoring: ''
+  custom_message_smooch_bot_message_confirmed_caio-bot-garden-refactoring: ''
+  custom_message_smooch_bot_message_unconfirmed_caio-bot-garden-refactoring: ''
+  custom_message_smooch_bot_disabled_caio: ''
   custom_message_smooch_bot_ask_for_confirmation_checkpoint: |-
     Merci de nous envoyer ce message.
 
