Ticket #7652 - allow user to update/reset password

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,6 +98,7 @@ en:
         description: Translation has been reviewed and an error was found
   errors:
     messages:
+      invalid_password: 'Invalid password'
       extension_white_list_error: 'cannot have type %{extension}, allowed types: %{allowed_types}'
       invalid_size: must be between %{min_width}x%{min_height} and %{max_width}x%{max_height}
         pixels
