--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,25 +42,25 @@ en:
         description: Translation has been reviewed and approved for publishing
       error:
         label: Error
-        description: 
+        description:
       false:
         label: false
         description: 'Conclusion: the item''s content is false'
       inconclusive:
         label: Inconclusive
-        description: 
+        description:
       misleading:
         label: Misleading
-        description: 
+        description:
       disputed:
         label: Disputed
-        description: 
+        description:
       out_of_scope:
         label: Out Of Scope
-        description: 
+        description:
       junk:
         label: Junk
-        description: 
+        description:
       unstarted:
         label: Unstarted
         description: Default, just added to Check, no work has started
@@ -566,6 +566,10 @@ en:
     Here are the steps we took to determine this: %{url}
   smooch_bot_ask_for_confirmation: |-
     Thank you for sending this request. Do you want us to verify its content?
+
+    To say yes, *please reply with 1*. Any other response will end our conversation.
+  smooch_bot_ask_for_tos: |-
+    Please read the Terms of Service at %{tos}. Do you accept them?
 
     To say yes, *please reply with 1*. Any other response will end our conversation.
   smooch_bot_window_closing: The volume of requests on this channel is very high,
