--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -563,7 +563,11 @@ ar:
   smooch_bot_ask_for_confirmation: |-
     شكراً لإرسال هذا الطلب. هل تود أننا نتحقق من صحة محتواه ؟
 
-    لتقول نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي المحادثة.
+    للاجابة نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي المحادثة.
+  smooch_bot_ask_for_tos: |-
+    يرجى قراءة  شروط الاستخدام %{tos}. هل تقبل كافة الشروط ؟
+
+    للاجابة نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي المحادثة.
   smooch_bot_window_closing: إن حجم الطلبات مرتفع للغاية ، ولم نتمكن من معالجة طلبك
     بعد. شكراً على الانتظار.
   smooch_bot_not_final: |-
@@ -676,7 +680,7 @@ ar:
 
     هل تشك في أنها معلومات خاطئة تتعلق بالانتخابات العامة الهندية لعام 2019 ؟
 
-    ليقول نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي طلبك.
+    للاجابة نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي طلبك.
   custom_message_smooch_bot_message_confirmed_checkpoint: |-
     شكرا لكم. سوف تساعدنا رسالتك في بحث مدى انتشار المعلومات الخاطئة على WhatsApp خلال هذه الانتخابات.
 
