--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -82,3 +82,4 @@ hi:
   custom_message_smooch_bot_not_final_checkpoint: "[सत्यापन रिपोर्ट - सुधार] आपके
     द्वारा हमारे साथ साझा किया गया संदेश गलत तरीके से चिह्नित किया गया था। *%{status}*
     आगे के सत्यापन के लिए यह अभी भी हमारी पंक्ति में है।"
+  custom_message_smooch_bot_ask_for_tos_checkpoint: ''
