--- a/config/locales/ml.yml
+++ b/config/locales/ml.yml
@@ -178,3 +178,4 @@ ml:
   custom_message_smooch_bot_not_final_checkpoint: "[പരിശോധനാ റിപ്പോര്‍ട്ട്-തിരുത്ത്]
     താങ്കളയച്ച സന്ദേശം *1%{status} * എന്ന് തെറ്റായി അടയാളപ്പെടുത്തിയതാണ്. അത് ഇപ്പോഴും
     പരിശോധനക്കായുള്ള വരിയിലാണ്. "
+  custom_message_smooch_bot_ask_for_tos_checkpoint: ''
