Ticket #7657 - handle multiple errors

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,6 +99,7 @@ en:
   errors:
     messages:
       invalid_password: Invalid password
+      invalid_qrcode: Invalid validation code
       extension_white_list_error: 'cannot have type %{extension}, allowed types: %{allowed_types}'
       invalid_size: must be between %{min_width}x%{min_height} and %{max_width}x%{max_height}
         pixels
